--- a/index.html
+++ b/index.html
@@ -30,16 +30,11 @@
             </div>
             <span class="line"></span>
         </div>
-        <div class="container-fluid">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary navbar__content">
-                <div class="container">
-                  <a class="navbar-brand" href="#">FOOTKING</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 navbar__content-list">
-                      <li class="nav-item dropdown">
+        <div class="container">
+            <nav class="navbar__content d-flex">
+                <a href="#" class="navbar__content-logo">FOODKING</a>
+                <ul class="navbar-links d-flex">
+                    <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             HOME PAGE
                         </a>
@@ -49,10 +44,9 @@
                           <li><hr class="dropdown-divider"></li>
                           <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
-                      </li>
-                      <li class="nav-item dropdown">
+                      </li><li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            SHOP 
+                            SHOP
                         </a>
                         <ul class="dropdown-menu">
                           <li><a class="dropdown-item" href="#">Action</a></li>
@@ -83,13 +77,14 @@
                           <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
                       </li>
-                      <li class="nav-item">
-                        <a class="nav-link" aria-disabled="true">CONTACT</a>
-                      </li>
+                        <a href="#" class="navbar__content-link">CONTACT</a>
                     </ul>
-                  </div>
-                </div>
-              </nav>
+                    <div class="navbar__content-end d-flex">
+                        <a href="#" class="navbar__content-btn-">korzina <span></span></a>
+                        <a href="#" class="navbar__content-btn">CONTACT US</a>
+                        <span class="navbar__menu-logo"></span>
+                    </div>
+            </nav>
         </div>
     </header>
 </div>
