its was close but im back everything

--- a/index.html
+++ b/index.html
@@ -90,6 +90,44 @@
                 </div>
               </nav>
         </div>
+        <div id="carouselExampleSlidesOnly" class="carousel slide pointer-event" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2" class=""></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3" class="active" aria-current="true"></button>
+                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 3" class=""></button>
+              </div>
+            <div class="carousel-inner">
+              <div class="carousel-item">
+                <img src="images/big-pizza.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <p class="carousel__content-desc">crispy, every bite taste</p>
+                    <h5 class="carousel__content-title">delicious fried chiken</h5>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                <img src="images/big-pizza.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <p class="carousel__content-desc">crispy, every bite taste</p>
+                    <h5 class="carousel__content-title">delicious fried chiken</h5>
+                  </div>
+              </div>
+              <div class="carousel-item active">
+                <img src="images/big-pizza.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <p class="carousel__content-desc">crispy, every bite taste</p>
+                    <h5 class="carousel__content-title">delicious fried chiken</h5>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                <img src="images/big-pizza.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <p class="carousel__content-desc">crispy, every bite taste</p> 
+                    <h5 class="carousel__content-title">delicious fried chiken</h5>
+                  </div>
+            </div>
+          </div>
+    </div>
     </header>
 </div>
 <script src="bootstrap.js"></script>
