--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </div>
     </header>
 </div>
-<script src=""></script>
+<script src="sc.js"></script>
 <script src="bootstrap.js"></script>
 </body>
 </html>
