--- a/index.html
+++ b/index.html
@@ -1,136 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>foot king</title>
-    <link rel="stylesheet" href="styiles/bootstrap.css">
-    <link rel="stylesheet" href="styiles/styile.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>foot king</title>
+  <link rel="stylesheet" href="styiles/bootstrap.css">
+  <link rel="stylesheet" href="styiles/styile.css">
 </head>
+
 <body>
-<div class="wrapper">
+  <div class="wrapper">
     <header class="header">
-        <div class="container">
-            <div class="navbar-top__content d-flex">
-                <div class="navbar-top__item d-flex">
-                    <p class="navbar-top__content-desc"><span>100%</span> Secure delivery without contacting the courier</p>
-                    <a href="#" class="navbar-top__content-btn">Track Your Order</a>
-                </div>
-                <div class="navbar-top__box d-flex">
-                    <form class="d-flex" role="search">
-                        <input class="form-control form__input" type="search" placeholder="Search" aria-label="Search">
-                    </form>
-                    <ul class="navbar-top__content-list d-flex">
-                        <li class="navbar-top__content-item"><a href="#" class="navbar-top__content-link"><img src="images/toppng.com-white-facebook-icon-png-facebook-logo-facebook-facebook-fortnite-logo-transparent-white-176x367.png" alt="" class="navbar-top__content-pic"></a></li>
-                        <li class="navbar-top__content-item"><a href="#" class="navbar-top__content-link"><img src="images/toppng.com-white-facebook-icon-png-facebook-logo-facebook-facebook-fortnite-logo-transparent-white-176x367.png" alt="" class="navbar-top__content-pic"></a></li>
-                        <li class="navbar-top__content-item"><a href="#" class="navbar-top__content-link"><img src="images/toppng.com-white-facebook-icon-png-facebook-logo-facebook-facebook-fortnite-logo-transparent-white-176x367.png" alt="" class="navbar-top__content-pic"></a></li>
-                        <li class="navbar-top__content-item"><a href="#" class="navbar-top__content-link"><img src="images/toppng.com-white-facebook-icon-png-facebook-logo-facebook-facebook-fortnite-logo-transparent-white-176x367.png" alt="" class="navbar-top__content-pic"></a></li>
-                    </ul>
-                </div>
-            </div>
-            <span class="line"></span>
+      <div class="container">
+        <div class="navbar-top__content d-flex">
+          <div class="navbar-top__item d-flex">
+            <p class="navbar-top__content-desc"><span>100%</span> Secure delivery without contacting the courier</p>
+            <a href="#" class="navbar-top__content-btn">Track Your Order</a>
+          </div>
+          <div class="navbar-top__box d-flex">
+            <form class="d-flex" role="search">
+              <input class="form-control form__input" type="search" placeholder="Search" aria-label="Search">
+            </form>
+            <ul class="navbar-top__content-list d-flex">
+              <li class="navbar-top__content-item"><a href="#" class="navbar-top__content-link"><img
+                    src="images/toppng.com-white-facebook-icon-png-facebook-logo-facebook-facebook-fortnite-logo-transparent-white-176x367.png"
+                    alt="" class="navbar-top__content-pic"></a></li>
+              <li class="navbar-top__content-item"><a href="#" class="navbar-top__content-link"><img
+                    src="images/toppng.com-white-facebook-icon-png-facebook-logo-facebook-facebook-fortnite-logo-transparent-white-176x367.png"
+                    alt="" class="navbar-top__content-pic"></a></li>
+              <li class="navbar-top__content-item"><a href="#" class="navbar-top__content-link"><img
+                    src="images/toppng.com-white-facebook-icon-png-facebook-logo-facebook-facebook-fortnite-logo-transparent-white-176x367.png"
+                    alt="" class="navbar-top__content-pic"></a></li>
+              <li class="navbar-top__content-item"><a href="#" class="navbar-top__content-link"><img
+                    src="images/toppng.com-white-facebook-icon-png-facebook-logo-facebook-facebook-fortnite-logo-transparent-white-176x367.png"
+                    alt="" class="navbar-top__content-pic"></a></li>
+            </ul>
+          </div>
         </div>
-        <div class="container-fluid">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary navbar__content">
-                <div class="container">
-                  <a class="navbar-brand" href="#">FOOTKING</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            HOME PAGE
-                        </a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">Action</a></li>
-                          <li><a class="dropdown-item" href="#">Another action</a></li>
-                          <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                      </li>
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            SHOP 
-                        </a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">Action</a></li>
-                          <li><a class="dropdown-item" href="#">Another action</a></li>
-                          <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                      </li>
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            BLOG
-                        </a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">Action</a></li>
-                          <li><a class="dropdown-item" href="#">Another action</a></li>
-                          <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                      </li>
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            PAGES 
-                        </a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">Action</a></li>
-                          <li><a class="dropdown-item" href="#">Another action</a></li>
-                          <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" aria-disabled="true">CONTACT</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </nav>
+        <span class="line"></span>
+      </div>
+      <div class="container">
+        <nav class="navbar__content d-flex">
+          <h2 class="navbar__content-logo">FOODKING</h2>
+          <ul class="navbar-links d-flex">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                HOMEPAGE
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">HOMEPAGE</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                SHOP
+              </a>
+              <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">SHOP</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              BLOG
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">BLOG</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              PAGES
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">PAGES</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+          <a href="#" class="navbar__content-link">CONATCT</a>
+        </ul>
+        <div class="navbar__content-end d-flex">
+          <p class="navbar__content-btn-korzina">KORZINA</p>
+          <a href="#" class="navbar__content-btn">CONTACT US</a>
+          <a href="#" class="navbar__menu-logo"></a>
         </div>
-        <div id="carouselExampleSlidesOnly" class="carousel slide pointer-event" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2" class=""></button>
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3" class="active" aria-current="true"></button>
-                <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 3" class=""></button>
-              </div>
-            <div class="carousel-inner">
-              <div class="carousel-item">
-                <img src="images/big-pizza.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <p class="carousel__content-desc">crispy, every bite taste</p>
-                    <h5 class="carousel__content-title">delicious fried chiken</h5>
-                  </div>
-              </div>
-              <div class="carousel-item">
-                <img src="images/big-pizza.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <p class="carousel__content-desc">crispy, every bite taste</p>
-                    <h5 class="carousel__content-title">delicious fried chiken</h5>
-                  </div>
-              </div>
-              <div class="carousel-item active">
-                <img src="images/big-pizza.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <p class="carousel__content-desc">crispy, every bite taste</p>
-                    <h5 class="carousel__content-title">delicious fried chiken</h5>
-                  </div>
-              </div>
-              <div class="carousel-item">
-                <img src="images/big-pizza.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <p class="carousel__content-desc">crispy, every bite taste</p> 
-                    <h5 class="carousel__content-title">delicious fried chiken</h5>
-                  </div>
+      </nav>
+    </div>
+      <div id="carouselExampleSlidesOnly" class="carousel slide pointer-event" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class=""
+            aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"
+            class=""></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"
+            class="active" aria-current="true"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 3"
+            class=""></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item">
+            <img src="images/big-pizza.png" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <p class="carousel__content-desc">crispy, every bite taste</p>
+              <h5 class="carousel__content-title">delicious fried chiken</h5>
             </div>
           </div>
-    </div>
+          <div class="carousel-item">
+            <img src="images/big-pizza.png" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <p class="carousel__content-desc">crispy, every bite taste</p>
+              <h5 class="carousel__content-title">delicious fried chiken</h5>
+            </div>
+          </div>
+          <div class="carousel-item active">
+            <img src="images/big-pizza.png" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <p class="carousel__content-desc">crispy, every bite taste</p>
+              <h5 class="carousel__content-title">delicious fried chiken</h5>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/big-pizza.png" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <p class="carousel__content-desc">crispy, every bite taste</p>
+              <h5 class="carousel__content-title">delicious fried chiken</h5>
+            </div>
+          </div>
+        </div>
+      </div>
     </header>
-</div>
-<script src="sc.js"></script>
-<script src="bootstrap.js"></script>
+  </div>
+  <script src="sc.js"></script>
+  <script src="bootstrap.js"></script>
 </body>
+
 </html>
