--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
           <h2 class="navbar__content-logo">FOODKING</h2>
           <ul class="navbar-links d-flex">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
                 HOMEPAGE
               </a>
               <ul class="dropdown-menu">
@@ -58,53 +59,56 @@
               </ul>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
                 SHOP
               </a>
               <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">SHOP</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              BLOG
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">BLOG</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              PAGES
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">PAGES</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-          <a href="#" class="navbar__content-link">CONATCT</a>
-        </ul>
-        <div class="navbar__content-end d-flex">
-          <p class="navbar__content-btn-korzina">KORZINA</p>
-          <a href="#" class="navbar__content-btn">CONTACT US</a>
-          <a href="#" class="navbar__menu-logo"></a>
-        </div>
-      </nav>
-    </div>
+                <li><a class="dropdown-item" href="#">SHOP</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                BLOG
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">BLOG</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                PAGES
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">PAGES</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+            <a href="#" class="navbar__content-link">CONATCT</a>
+          </ul>
+          <div class="navbar__content-end d-flex">
+            <p class="navbar__content-btn-korzina">KORZINA</p>
+            <a href="#" class="navbar__content-btn">CONTACT US</a>
+            <a href="#" class="navbar__menu-logo"></a>
+          </div>
+        </nav>
+      </div>
       <div id="carouselExampleSlidesOnly" class="carousel slide pointer-event" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class=""
@@ -148,6 +152,74 @@
         </div>
       </div>
     </header>
+    <div class="background-grey">
+      <img src="images/tomato-shape.png" alt="" class="background-pic-tomato">
+      <div class="container">
+        <div class="sellers">
+          <div class="sellers__container">
+            <div class="sellers__box">
+              <p class="sellers__box-desc">CRISPY, EVERY BITE TASTE</p>
+              <h2 class="sellers__box-title">POPULAR FOOD ITEMS</h2>
+            </div>
+            <ul class="nav mb-3 sellers-link-list" id="pills-tab" role="tablist">
+              <li class="nav-item nav-item-btn" role="presentation">
+                <button class="nav-link active nav-link-sellers nav-link-sellers-1" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true"><span class="nav-link-arrow nav-link-arrow-1"></span></button>
+              </li>
+              <li class="nav-item nav-item-btn" role="presentation">
+                <button class="nav-link nav-link-sellers nav-link-sellers-2" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false"><span class="nav-link-arrow nav-link-arrow-2"></span></button>
+              </li>
+            </ul>
+          </div>
+          <div class="tab-content" id="pills-tabContent">
+            <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
+              <div class="sellers__content d-flex">
+                <a href="#" class="sellers__item">
+                  <img src="images/pizza.png" alt="" class="seller__content-pic">
+                  <span class="sellers__content-line"></span>
+                  <h2 class="sellers__content-title">PRO PIZZA</h2>
+                  <p class="sellers__content-desc">5 PRODUCT</p>
+                </a>
+                <a href="#" class="sellers__item">
+                  <img src="images/pizza.png" alt="" class="seller__content-pic">
+                  <span class="sellers__content-line"></span>
+                  <h2 class="sellers__content-title">PRO PIZZA</h2>
+                  <p class="sellers__content-desc">5 PRODUCT</p>
+                </a>
+                <a href="#" class="sellers__item">
+                  <img src="images/pizza.png" alt="" class="seller__content-pic">
+                  <span class="sellers__content-line"></span>
+                  <h2 class="sellers__content-title">PRO PIZZA</h2>
+                  <p class="sellers__content-desc">5 PRODUCT</p>
+                </a>
+              </div>
+            </div>
+            <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">
+              <div class="sellers__content d-flex">
+                <a href="#" class="sellers__item">
+                  <img src="images/pizza.png" alt="" class="seller__content-pic">
+                  <span class="sellers__content-line"></span>
+                  <h2 class="sellers__content-title">PRO PIZZA</h2>
+                  <p class="sellers__content-desc">5 PRODUCT</p>
+                </a>
+                <a href="#" class="sellers__item">
+                  <img src="images/pizza.png" alt="" class="seller__content-pic">
+                  <span class="sellers__content-line"></span>
+                  <h2 class="sellers__content-title">PRO PIZZA</h2>
+                  <p class="sellers__content-desc">5 PRODUCT</p>
+                </a>
+                <a href="#" class="sellers__item">
+                  <img src="images/pizza.png" alt="" class="seller__content-pic">
+                  <span class="sellers__content-line"></span>
+                  <h2 class="sellers__content-title">PRO PIZZA</h2>
+                  <p class="sellers__content-desc">5 PRODUCT</p>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <img src="images/burger-shape-2.png" alt="" class="background-pic-burger">
+      </div>
+    </div>
   </div>
   <script src="sc.js"></script>
   <script src="bootstrap.js"></script>
