--- a/index.html
+++ b/index.html
@@ -218,6 +218,24 @@
           </div>
         </div>
         <img src="images/burger-shape-2.png" alt="" class="background-pic-burger">
+        <div class="acts d-flex">
+          <div class="acts__content-food">
+            <div class="acts__conatiner d-flex">
+              <p class="acts__content-desc">CRISPY, EVERY BITE TASTE</p>
+              <img src="images/burger-text.png" alt="" class="acts__content-pic-burger">
+            </div>
+            <div class="acts__box">
+              <h2 class="acts__content-title">SUPER DELICIOUS</h2>
+              <img src="images/50percent-off.png" alt="" class="acts__content-pic-sale">
+            </div>
+            <img src="images/main-food.png" alt="" class="acts__content-pic-main">
+          </div>
+          <div class="acts__content-pizza d-flex">
+            <img src="images/pizza-text.png" alt="" class="acts__content-pic-title">
+            <img src="images/pizza.png" alt="" class="acts__content-pic-pizza">
+          </div>
+        </div>
+        <div class="test">sjk</div>
       </div>
     </div>
   </div>
