--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>foot king</title>
   <link rel="stylesheet" href="styiles/bootstrap.css">
   <link rel="stylesheet" href="styiles/styile.css">
+  <link rel="stylesheet" href="styiles/all.min.css">
 </head>
 
 <body>
@@ -235,7 +236,32 @@
             <img src="images/pizza.png" alt="" class="acts__content-pic-pizza">
           </div>
         </div>
-        <div class="test">sjk</div>
+        <div class="sponsor">
+          <h2 class="sponsor-title">GLOBAL <span>5K+</span> HAPPY SPONSORS WITH US</h2>
+          <div class="sponsor__content d-flex">
+            <img src="images/chicken.png" alt="" class="sponsor__content-pic">
+            <img src="images/chicken.png" alt="" class="sponsor__content-pic">
+            <img src="images/chicken.png" alt="" class="sponsor__content-pic">
+            <img src="images/chicken.png" alt="" class="sponsor__content-pic">
+            <img src="images/chicken.png" alt="" class="sponsor__content-pic">
+          </div>
+        </div>
+      </div>
+      <div class="background-white">
+        <div class="container">
+          <div class="chiken d-flex">
+            <div class="chiken__content">
+              <h2 class="chiken__content-title">ASTACKIN</h2>
+              <p class="chiken__content-desc">CHIKEN $59,00</p>
+              <a href="#" class="chiken__content-btn"><i class="far fa-truck"></i> ORDER NOW</a>
+            </div>
+            <div class="chiken__item">
+              <p class="chiken__content-sale">50%</p>
+              <img src="images/grilled.png" alt="" class="chiken__content-pic-chik">
+            </div>
+          </div>
+        </div>
+        <img src="images/spicy.png" alt="" class="chiken-pic-spy">
       </div>
     </div>
   </div>
