--- a/index.html
+++ b/index.html
@@ -263,6 +263,159 @@
         </div>
         <img src="images/spicy.png" alt="" class="chiken-pic-spy">
       </div>
+      <div class="container">
+        <main class="menu">
+          <p class="menu-desc">CRISPY, EVERY BITE TASTE</p>
+          <h2 class="menu-title">POPULAR FOOD ITEMS</h2>
+          <div class="menu__content">
+            <div class="menu__item">
+              <div class="menu__item-pic">
+                <span class="far fa-heart"></span>
+                <img src="images/burger.png" alt="" class="menu__content-pic">
+              </div>
+              <div class="menu__box">
+                <a href="#" class="menu__content-btn"><span><i class="fas fa-shopping-basket"></i></span> Add To Cart</a>
+                <p class="menu__content-price"><span class="menu__content-price-prs">-5%</span> <span class="menu__content-price-red">$30.52</span>$28.52</p>
+                <h2 class="menu__content-title">WHOPPER BURGER KING</h2>
+                <div class="menu__content-star d-flex">
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star text-white"></span>
+              </div>
+              </div>
+            </div>
+            <div class="menu__item">
+              <div class="menu__item-pic">
+                <span class="far fa-heart"></span>
+                <img src="images/burger.png" alt="" class="menu__content-pic">
+              </div>
+              <div class="menu__box">
+                <a href="#" class="menu__content-btn"><span><i class="fas fa-shopping-basket"></i></span> Add To Cart</a>
+                <p class="menu__content-price"><span class="menu__content-price-prs">-5%</span> <span class="menu__content-price-red">$30.52</span>$28.52</p>
+                <h2 class="menu__content-title">WHOPPER BURGER KING</h2>
+                <div class="menu__content-star d-flex">
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star text-white"></span>
+              </div>
+              </div>
+            </div>
+            <div class="menu__item">
+              <div class="menu__item-pic">
+                <span class="far fa-heart"></span>
+                <img src="images/burger.png" alt="" class="menu__content-pic">
+              </div>
+              <div class="menu__box">
+                <a href="#" class="menu__content-btn"><span><i class="fas fa-shopping-basket"></i></span> Add To Cart</a>
+                <p class="menu__content-price"><span class="menu__content-price-prs">-5%</span> <span class="menu__content-price-red">$30.52</span>$28.52</p>
+                <h2 class="menu__content-title">WHOPPER BURGER KING</h2>
+                <div class="menu__content-star d-flex">
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star text-white"></span>
+              </div>
+              </div>
+            </div>
+            <div class="menu__item">
+              <div class="menu__item-pic">
+                <span class="far fa-heart"></span>
+                <img src="images/burger.png" alt="" class="menu__content-pic">
+              </div>
+              <div class="menu__box">
+                <a href="#" class="menu__content-btn"><span><i class="fas fa-shopping-basket"></i></span> Add To Cart</a>
+                <p class="menu__content-price"><span class="menu__content-price-prs">-5%</span> <span class="menu__content-price-red">$30.52</span>$28.52</p>
+                <h2 class="menu__content-title">WHOPPER BURGER KING</h2>
+                <div class="menu__content-star d-flex">
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star text-white"></span>
+              </div>
+              </div>
+            </div>
+            <div class="menu__item">
+              <div class="menu__item-pic">
+                <span class="far fa-heart"></span>
+                <img src="images/burger.png" alt="" class="menu__content-pic">
+              </div>
+              <div class="menu__box">
+                <a href="#" class="menu__content-btn"><span><i class="fas fa-shopping-basket"></i></span> Add To Cart</a>
+                <p class="menu__content-price"><span class="menu__content-price-prs">-5%</span> <span class="menu__content-price-red">$30.52</span>$28.52</p>
+                <h2 class="menu__content-title">WHOPPER BURGER KING</h2>
+                <div class="menu__content-star d-flex">
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star text-white"></span>
+              </div>
+              </div>
+            </div>
+            <div class="menu__item">
+              <div class="menu__item-pic">
+                <span class="far fa-heart"></span>
+                <img src="images/burger.png" alt="" class="menu__content-pic">
+              </div>
+              <div class="menu__box">
+                <a href="#" class="menu__content-btn"><span><i class="fas fa-shopping-basket"></i></span> Add To Cart</a>
+                <p class="menu__content-price"><span class="menu__content-price-prs">-5%</span> <span class="menu__content-price-red">$30.52</span>$28.52</p>
+                <h2 class="menu__content-title">WHOPPER BURGER KING</h2>
+                <div class="menu__content-star d-flex">
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star text-white"></span>
+              </div>
+              </div>
+            </div>
+            <div class="menu__item">
+              <div class="menu__item-pic">
+                <span class="far fa-heart"></span>
+                <img src="images/burger.png" alt="" class="menu__content-pic">
+              </div>
+              <div class="menu__box">
+                <a href="#" class="menu__content-btn"><span><i class="fas fa-shopping-basket"></i></span> Add To Cart</a>
+                <p class="menu__content-price"><span class="menu__content-price-prs">-5%</span> <span class="menu__content-price-red">$30.52</span>$28.52</p>
+                <h2 class="menu__content-title">WHOPPER BURGER KING</h2>
+                <div class="menu__content-star d-flex">
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star text-white"></span>
+              </div>
+              </div>
+            </div>
+            <div class="menu__item">
+              <div class="menu__item-pic">
+                <span class="far fa-heart"></span>
+                <img src="images/burger.png" alt="" class="menu__content-pic">
+              </div>
+              <div class="menu__box">
+                <a href="#" class="menu__content-btn"><span><i class="fas fa-shopping-basket"></i></span> Add To Cart</a>
+                <p class="menu__content-price"><span class="menu__content-price-prs">-5%</span> <span class="menu__content-price-red">$30.52</span>$28.52</p>
+                <h2 class="menu__content-title">WHOPPER BURGER KING</h2>
+                <div class="menu__content-star d-flex">
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star text-white"></span>
+              </div>
+              </div>
+            </div>
+          </div>
+          <a href="#" class="menu-btn"><i class="far fa-truck"></i> view more</a>
+        </main>
+      </div>
     </div>
   </div>
   <script src="sc.js"></script>
